# otus-cpp.First_Project

./: .travis.yml  CMakeLists.txt  main.cpp
docs/: Doxyfile
src/: my_local.h
tests/unit_tests/: CMakeLists.txt  GMock_Unit_tests.cpp
